# openai-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: integration.yml  rust.yml  test.yml
src/: construct.rs  error.rs  lib.rs  object.rs  other.rs  param.rs  types.rs
src/api/: client.rs  error.rs
tests/: api_key.rs  construct.rs  integration.rs
tests/common/: mod.rs
