[package]
name = "openai-rust"
version = "0.1.0"
authors = ["Mani Sundararajan"]
edition = "2021"
description = "Wrapper Library for the OpenAI API written in Rust"
repository = "https://github.com/itsrainingmani/openai-rust"
license = "MIT"
keywords = ["openai", "api", "wrapper", "rust"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
dotenv = "0.15.0"
