[package]
name = "openai-rust"
version = "0.1.0"
authors = ["Mani Sundararajan"]
edition = "2021"
description = "Wrapper Library for the OpenAI API written in Rust"
repository = "https://github.com/itsrainingmani/openai-rust"
license = "MIT"
keywords = ["openai", "api", "wrapper", "rust"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "~0.13"
cron = { version = "~0.12", optional = true }
derive_builder = "~0.11.2"
itertools = { version = "~0.10", optional = true }
log = "~0.4.6"
percent-encoding = { version = "^2.0", optional = true }
reqwest = { version = "~0.11.19", features = [
  "blocking",
  "json",
], default-features = false, optional = true }
thiserror = { version = "^1.0.2", optional = true }
async-trait = { version = "~0.1.9", optional = true }
futures-util = { version = "0.3.14", default-features = false, optional = true }

bytes = "^1.0"
chrono = { version = "~0.4.23", default-features = false, features = [
  "clock",
  "serde",
] }
http = "~0.2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "^2.1"

# Minimum version fixes.
#
# `unreachable` requires only `void 1.0.0`
# https://github.com/reem/rust-unreachable/pull/15
void = { version = "^1.0.1", optional = true }
# Required to avoid https://rustsec.org/advisories/RUSTSEC-2023-0044
# Required to avoid https://rustsec.org/advisories/RUSTSEC-2023-0072
openssl = { version = "~0.10.60", optional = true }

[dev-dependencies]
itertools = { version = "~0.10" }
dotenv = "0.15.0"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
